[metadata]
name = twitterhal
version = attr: twitterhal.__version__
description = A MegaHAL bot for Twitter
long_description = file: README.md
author = Robert Huselius
author_email = robert@huseli.us
long_description_content_type = text/markdown
url = https://github.com/Eboreg/twitterhal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Communications
    Topic :: Internet
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic

[options]
packages = twitterhal, twitterhal.conf
python_requires = >=3.6
install_requires =
    megahal>=0.3
    python-Levenshtein
    python-twitter
    emoji

[options.extras_require]
detectlanguage = detectlanguage
redis =
    redis>=3
    hiredis

[options.entry_points]
console_scripts =
    twitterhal = twitterhal.command_line:main

[flake8]
exclude =
    .git
    __pycache__
    *.pyi
ignore = F723,W504
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
known_self = twitterhal
lines_after_imports = 2
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,SELF,LOCALFOLDER

[mypy]
follow_imports = skip
show_error_codes = True
ignore_missing_imports = True
files = twitterhal/.
check_untyped_defs = true
